--- a/Práticas/AP2-PD2/dss-demonstration/dss-demo-webapp/src/main/webapp/WEB-INF/thymeleaf/cmd-signature.html
+++ b/Práticas/AP2-PD2/dss-demonstration/dss-demo-webapp/src/main/webapp/WEB-INF/thymeleaf/cmd-signature.html
@@ -25,6 +25,8 @@
                 
                 <div th:replace="fragment/fields::field-content-timestamp"></div>
 
+                <div th:replace="fragment/fields::field-user-pin"></div>
+
                 <div class="form-group row">
                     <div class="offset-sm-3 col-sm-9">
                         <button type="submit" class="btn btn-primary" id="submit-button" th:text="#{label.submit}"></button>
